# changeling

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.markdown  index.html  params.json
cmake/Modules/: FindSndfile.cmake  MacroEnsureVersion.cmake  OptimizeForArchitecture.cmake
examples/: client.py
includes/: changeling.hpp
